Restructure project directories to better fit Gradle
Closes gh-46358