@@ -16,12 +16,11 @@
 
 package org.springframework.boot.build.context.properties;
 
-import java.util.Collections;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
-import org.gradle.api.Task;
 import org.gradle.api.artifacts.Configuration;
 import org.gradle.api.file.RegularFile;
 import org.gradle.api.plugins.JavaPlugin;
@@ -89,8 +88,7 @@ public class ConfigurationPropertiesPlugin implements Plugin<Project> {
 			.getByName(JavaPlugin.ANNOTATION_PROCESSOR_CONFIGURATION_NAME);
 		annotationProcessors.getDependencies()
 			.add(project.getDependencies()
-				.project(Collections.singletonMap("path",
-						":spring-boot-project:spring-boot-tools:spring-boot-configuration-processor")));
+				.project(Map.of("path", ":configuration-metadata:spring-boot-configuration-processor")));
 	}
 
 	private void disableIncrementalCompilation(Project project) {
@@ -122,7 +120,7 @@ public class ConfigurationPropertiesPlugin implements Plugin<Project> {
 		JavaCompile compileJava = project.getTasks()
 			.withType(JavaCompile.class)
 			.getByName(JavaPlugin.COMPILE_JAVA_TASK_NAME);
-		((Task) compileJava).getInputs()
+		compileJava.getInputs()
 			.files(project.getTasks().getByName(JavaPlugin.PROCESS_RESOURCES_TASK_NAME))
 			.withPathSensitivity(PathSensitivity.RELATIVE)
 			.withPropertyName("processed resources");
